@@ -12,6 +12,10 @@ group = "com.autonomouslogic.esiproxy"
 
 ext {
 	mainClassName = "com.autonomouslogic.eveesiproxy.EveEsiProxy"
+	envProperties = new Properties()
+	if (file("local.env").exists()) {
+		file("local.env").withInputStream { envProperties.load(it) }
+	}
 }
 
 repositories {
@@ -53,6 +57,9 @@ dependencies {
 	implementation "com.autonomouslogic.commons:commons-java:1.9.1"
 	implementation "commons-io:commons-io:2.17.0"
 	implementation "com.google.guava:guava:33.3.1-jre"
+	implementation "com.github.scribejava:scribejava-core:8.3.3"
+	implementation "commons-codec:commons-codec:1.17.1"
+	implementation "org.apache.commons:commons-lang3:3.17.0"
 
 	// Tests
 	testAnnotationProcessor "com.google.dagger:dagger-compiler:2.52"
@@ -100,7 +107,8 @@ gitSemVer {
 }
 
 test {
-	environment "LOG_LEVEL", "trace"
+	environment "LOG_LEVEL", "TRACE"
+	environment "CONFIG_DIR", "/tmp"
 	jvmArgs "-client", "-XX:+UseG1GC", "-Xmx8g"
 
 	useJUnitPlatform()
@@ -125,6 +133,12 @@ application {
 			"-XX:MinHeapSize=" + 10 * 1024 * 1024,
 			"-XX:MaxRAMPercentage=80.0"
 	]
+}
+
+run {
+	environment "LOG_LEVEL", "TRACE"
+	jvmArgs "-client", "-XX:+UseZGC", "-Xmx2g"
+	environment envProperties
 }
 
 wrapper {
